# EDAI-Sem-5

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: embedder.py  engine.py  retriever.py
app/data/session_20260419_022618/backup/: chunks.pkl  faiss.index
app/ingestion/: chunk.py  load.py
data/session_20250729_080819/backup/: chunks.pkl
data/session_20250729_081109/backup/: faiss.index
data/session_20250905_125251/backup/: chunks.pkl  faiss.index
data/session_20250905_125415/backup/: chunks.pkl  faiss.index
data/session_20250905_125500/backup/: chunks.pkl
data/session_20250905_125504/backup/: faiss.index
scripts/: index_build.py  ingestion_testing.py  test.py
temp_uploads/session_20250905_125251/: requirements.docx
ui/: app.py
